* Agent Console: fix scenario in which an agent that opens several instances of
  the agent console under the same session will find that the pause duration
  increases by the pause multiplied by the number of consoles. 
* Dialer: add a method to detect that the Asterisk server process has been 
  restarted. This fixes the scenario where Asterisk crashes/restarts and the
  dialer is stuck with stale agent/call status until restarted.
* Campaign Out: fix broken campaign edit due to character encoding verification.
  Fixes Elastix bug #1403.
* Dialer (ECCP): intercept PeerStatus message to detect whether an extension
  currently in use for an agent login has been unregistered.
* Dialer (ECCP): restore writing to database of transferred extension, lost when 
  rewriting the Agent Console to use the ECCP protocol. Fixes Elastix bug #1396. 
* Reports: fix incorrect translations in reports
* Dialer: fix breakage due to introduction of 'goto' as reserved word in PHP 5.4
* Agent Console: fix bug in which a chronometer counter that starts from 0, as
  signaled in an event might be mistakenly interpreted as an order to stop the
  chronometer. Might fix Elastix bug #1319. Also, set consistent behavior of
  stopping chronometer on idle agent case. 
* Agent Console: if Elastix user matches an agent number, suggest this agent 
  number as the default agent to use for initial agent login. Second part of fix
  for Elastix bug #1354.
* Agents Monitoring: replace sending of full client state with hash of said 
  state. This prevents a potential issue of hitting a maximum URL length limit 
  due to unbounded size of agent list.
* Calls Per Agent: clean up implementation to use SQL query parameters and 
  simplify the API. Fix average calculation. Fixes Elastix bug #1371.
* Agents Monitoring: improve error handling when dialer process is shut down in
  the middle of monitoring.
* Installer: change form_field.etiqueta and form_field.value fields to TEXT.
  Fixes Elastix bug #1250.